[package]
name = "const-random-macro"
version = "0.1.14"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tkaitchuck/constrandom"
documentation = "https://docs.rs/const-random"
authors = ["Tom Kaitchuck <Tom.Kaitchuck@gmail.com>"]
keywords = ["rust", "constants", "macro"]
description = "Provides the procedural macro used by const-random"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = { version = "0.5.13" }
getrandom = "0.2.0"
tiny-keccak = { version = "2.0.2", features = ["shake"] }
once_cell = { version = "1.15", default-features = false, features = ["race", "alloc"] }
